--- a/client/src/styles/ReplyList.scss
+++ b/client/src/styles/ReplyList.scss
@@ -10,6 +10,6 @@
 }
 
 .replies__reply {
-  padding: 8px;
+  padding: 16px 8px;
   border-top: $light-border;
 }
